--- a/api/api-task-management/api-task-management/appsettings.Development.json
+++ b/api/api-task-management/api-task-management/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
+  "ConnectionStrings": {
+    "TasksDb": "Server=localhost,1433;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;",
+    "Seq": "http://localhost:5342"
   }
 }
