--- a/api/api-task-management/api-task-management/appsettings.json
+++ b/api/api-task-management/api-task-management/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "TasksDb": "Server=localhost,1433;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;",
+    "Seq": "http://localhost:5342"
+  }
 }
