--- a/api/api-task-management/api-task-management/appsettings.json
+++ b/api/api-task-management/api-task-management/appsettings.json
@@ -1,6 +1,6 @@
 {
+  "Seq": "http://localhost:5341",
   "ConnectionStrings": {
-    "TasksDb": "Server=localhost,1433;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;",
-    "Seq": "http://localhost:5342"
+    "TasksDb": "Server=localhost,1434;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;"
   }
 }
