implemented ui, pipes and API logic

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "moment": "^2.23.0",
+    "momentjs": "^2.0.0",
     "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.4",
