--- a/database/Dockerfile.stage
+++ b/database/Dockerfile.stage
@@ -8,4 +8,6 @@ COPY ./data.csv /opt/mssql-scripts
 ENV SA_PASSWORD=P@ssw0rd
 ENV ACCEPT_EULA=Y
 
-RUN /opt/mssql/bin/sqlservr --accept-eula & sleep 10 && /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'P@ssw0rd' -d master -i /opt/mssql-scripts/post-deployment.sql
+RUN ( /opt/mssql/bin/sqlservr --accept-eula & ) | grep -q "Service Broker manager has started" \
+    && /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'P@ssw0rd' -i/opt/mssql-scripts/post-deployment.sql \
+    && pkill sqlservr 
