--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@aspnet/signalr": "^1.1.0",
     "core-js": "^2.5.4",
+    "enum-values": "^1.2.1",
     "moment": "^2.23.0",
     "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
