--- a/k8s/mssql-cluster-ip-service.yaml
+++ b/k8s/mssql-cluster-ip-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: database-cluster-ip-service
+  name: mssql-cluster-ip-service
 spec:
   type: ClusterIP
   selector:   
-    component: database
+    component: mssql
   ports:
     - port: 1433
       targetPort: 1433
