--- a/k8s/mssql-deployment.yaml
+++ b/k8s/mssql-deployment.yaml
@@ -12,8 +12,15 @@ spec:
       labels:
         component: mssql
     spec:
+      volumes:
+        - name: mssql-storage
+          persistentVolumeClaim: 
+            claimName: database-persistent-volume-claim
       containers: 
         - name: mssql
           image: ddydeveloper/task-management-mssql
           ports:
             - containerPort: 1433
+          volumeMounts:
+            - name: mssql-storage
+              mountPath: /var/opt/mssql
