--- a/api/Dockerfile.stage
+++ b/api/Dockerfile.stage
@@ -16,5 +16,5 @@ FROM microsoft/dotnet:2.1-aspnetcore-runtime AS runtime
 WORKDIR /app
 COPY --from=build /app/api-task-management/out ./
 
-EXPOSE 80
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet api-task-management.dll
+EXPOSE 5000
+CMD ASPNETCORE_URLS=http://*:5000  dotnet api-task-management.dll
