--- a/database/Dockerfile.stage
+++ b/database/Dockerfile.stage
@@ -1,12 +1,5 @@
 FROM microsoft/mssql-server-linux
 
-RUN mkdir -p /opt/mssql/setup-scripts
+COPY ./data .
 
-COPY ./data /opt/mssql/setup-scripts
-
-ENV SA_PASSWORD=P@ssw0rd
-ENV ACCEPT_EULA=Y
-
-RUN ( /opt/mssql/bin/sqlservr --accept-eula & ) | grep -q "Service Broker manager has started" \
-    && /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'P@ssw0rd' -i /opt/mssql/setup-scripts/setup.sql \
-    && pkill sqlservr
+ENTRYPOINT ["sh", "entrypoint.sh"]
