--- a/k8s/mssql-deployment.yaml
+++ b/k8s/mssql-deployment.yaml
@@ -19,13 +19,14 @@ spec:
       containers: 
         - name: mssql
           image: ddydeveloper/task-management-mssql
-          command: ["/opt/mssql/bin/sqlservr", "/opt/mssql-tools/bin/sqlcmd"]
           ports:
             - containerPort: 1433
           volumeMounts:
             - name: mssql-storage
               mountPath: /var/opt/mssql
           env:
+            - name: ACCEPT_EULA
+              value: 'Y'
             - name: SA_PASSWORD
               valueFrom:
                 secretKeyRef:
