Disabled volumes fof k8s mssql

--- a/database/Dockerfile.compose
+++ b/database/Dockerfile.compose
@@ -1,2 +1,6 @@
 FROM microsoft/mssql-server-linux
-COPY ./data .
+
+RUN mkdir -p /usr/config
+COPY ./data /usr/config
+
+RUN chmod +x /usr/config/entrypoint.sh
