--- a/k8s/mssql-deployment.yaml
+++ b/k8s/mssql-deployment.yaml
@@ -19,11 +19,12 @@ spec:
       containers: 
         - name: mssql
           image: ddydeveloper/task-management-mssql
+          command: ["sh", "/usr/config/entrypoint.sh"]
           ports:
             - containerPort: 1433
-          volumeMounts:
-            - name: mssql-storage
-              mountPath: /var/opt/mssql
+          # volumeMounts:
+          #  - name: mssql-storage
+          #    mountPath: /var/opt/mssql
           env:
             - name: ACCEPT_EULA
               value: 'Y'
