--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - SA_PASSWORD=P@ssw0rd
       - ACCEPT_EULA=Y
       - MSSQL_PID=Developer
-    command: ["sh", "entrypoint.sh"]
+    command: ["sh", "/usr/config/entrypoint.sh"]
   client:
     restart: always
     image: task-management/client
