--- a/k8s/mssql-deployment.yaml
+++ b/k8s/mssql-deployment.yaml
@@ -21,10 +21,11 @@ spec:
           image: ddydeveloper/task-management-mssql
           command: ["sh", "/usr/config/entrypoint.sh"]
           ports:
-            - containerPort: 1433
-          # volumeMounts:
-          #  - name: mssql-storage
-          #    mountPath: /var/opt/mssql
+            - containerPort: 1433         
+          volumeMounts:
+           - name: mssql-storage
+             mountPath: /var/opt/mssql/data
+             subPath: mssql
           env:
             - name: ACCEPT_EULA
               value: 'Y'
