--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build --configuration=production",
     "build:stage": "ng build --configuration=stage",
-    "test": "ng test",
+    "test": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
