--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_install:
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project k8s-ddy
-  - gcloud config set compute/zone europe-west1-b
-  - gcloud container clusters get-credentials k8s-cluster
+  - gcloud config set compute/zone europe-north1-a
+  - gcloud container clusters get-credentials task-management-cluster
   
   # Login to docker hub
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
