--- a/api/api-task-management/api-task-management/appsettings.Development.json
+++ b/api/api-task-management/api-task-management/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "Seq": "http://localhost:5341",
   "ConnectionStrings": {
-    "TasksDb": "Server=localhost,1434;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;"
+    "TasksDb": "Server=localhost,1434;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;",
+    "Redis": "http://localhost:6380"
   }
 }
