--- a/api/api-task-management/api-task-management/api-task-management.csproj
+++ b/api/api-task-management/api-task-management/api-task-management.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Redis" Version="1.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Serilog" Version="2.7.2-dev-01033" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
