--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,13 @@ services:
       - ACCEPT_EULA=Y
       - MSSQL_PID=Developer
     command: ["sh", "/usr/config/entrypoint.sh"]
+  redis:
+    restart: always
+    container_name: redis
+    image: redis
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
   client:
     restart: always
     image: task-management/client
@@ -45,9 +52,11 @@ services:
     container_name: api
     environment:
       - ConnectionStrings__TasksDb=Server=db;DataBase=Tasks;User Id=sa;Password=P@ssw0rd;Connection Timeout=30;
+      - ConnectionStrings__Redis=redis
       - Seq=http://seq/
     ports:
       - "5000:5000"
     depends_on:
       - db
       - seq
+      - redis
