--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -3,7 +3,12 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations: 
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/affinity: "cookie"
+    nginx.ingress.kubernetes.io/session-cookie-name: "route"
+    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
+    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
+    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
 spec:
   rules:
     - http:
