--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations: 
-    # kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "route"
     nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
