--- a/client/Dockerfile.stage
+++ b/client/Dockerfile.stage
@@ -1,6 +1,7 @@
 FROM node:alpine as builder 
 WORKDIR /app
 COPY package.json .
+COPY package-lock.json .
 RUN npm ci
 COPY . .
 RUN npm run build:stage
