--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -3,13 +3,10 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations: 
+    nginx.ingress.kubernetes.io/affinity: cookie
+    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
+    nginx.ingress.kubernetes.io/session-cookie-name: route
     kubernetes.io/ingress.class: nginx
-    # nginx.ingress.kubernetes.io/affinity: "cookie"
-    # nginx.ingress.kubernetes.io/session-cookie-name: "route"
-    # nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
-    ingress.kubernetes.io/affinity: "cookie"
-    ingress.kubernetes.io/session-cookie-name: "route"
-    ingress.kubernetes.io/session-cookie-hash: "sha1"
 spec:
   rules:
     - http:
