--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -7,8 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/session-cookie-hash: sha1
     nginx.ingress.kubernetes.io/session-cookie-name: route
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-ssuer: 'letsencrypt-prod'
-    nginx.ingress.kubernetes.io/ssi-redirect: 'true'
+    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
   tls:
     - hosts:
