added kibana to ingress

--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -28,6 +28,10 @@ spec:
             backend:              
               serviceName: server-cluster-ip-service
               servicePort: 5000
+          - path: /logs
+            backend:              
+              serviceName: kibana
+              servicePort: 5601
     - host: www.meet-to-me.ru
       http:
         paths:
@@ -39,3 +43,7 @@ spec:
             backend:              
               serviceName: server-cluster-ip-service
               servicePort: 5000
+          - path: /logs
+            backend:              
+              serviceName: kibana
+              servicePort: 5601
