--- a/k8s/kibana-node-port.yaml
+++ b/k8s/kibana-node-port.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kibana
+  name: kibana-node-port
   namespace: logging
   labels:
     app: kibana
@@ -14,6 +14,5 @@ spec:
   - port: 5601
     protocol: TCP
     targetPort: ui
-    nodePort: 30601
   selector:
     app: kibana
