--- a/k8s/kibana-cluster-ip-service.yaml
+++ b/k8s/kibana-cluster-ip-service.yaml
@@ -2,14 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    addonmanager.kubernetes.io/mode: Reconcile
     app: kibana
+    kubernetes.io/cluster-service: "true"
+    kubernetes.io/name: Kibana
   name: kibana-cluster-ip-service
   namespace: logging
 spec:
   ports:
   - port: 5601
     protocol: TCP
-    targetPort: 5601
+    targetPort: ui
   selector:
-    app: kibana
+    k8s-app: kibana
   type: ClusterIP
