--- a/k8s/kibana-ingress-service.yaml
+++ b/k8s/kibana-ingress-service.yaml
@@ -1,11 +1,12 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: kibana-ingress-service
-  annotations: 
+  annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^/kibana/(.*)$ /$1 break;
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  labels:
+    app: kibana
+  name: kibana-ingress-service
+  namespace: logging
 spec:
   tls:
     - hosts:
@@ -13,17 +14,17 @@ spec:
         - www.meet-to-me.ru
       secretName: meet-to-me-ru
   rules:
-    - host: meet-to-me.ru
-      http:
-        paths:
-          - path: /kibana
-            backend:              
-              serviceName: kibana-cluster-ip-service
-              servicePort: 5601
-    - host: www.meet-to-me.ru
-      http:
-        paths:
-          - path: /kibana
-            backend:              
-              serviceName: kibana-cluster-ip-service
-              servicePort: 5601
+  - host: meet-to-me.ru
+    http:
+      paths:
+      - path: /kibana
+        backend:
+          serviceName: kibana-cluster-ip-service
+          servicePort: 5601
+  - host: www.meet-to-me.ru
+    http:
+      paths:
+      - path: /kibana
+        backend:
+          serviceName: kibana-cluster-ip-service
+          servicePort: 5601
