--- a/k8s/kibana-ingress-service.yaml
+++ b/k8s/kibana-ingress-service.yaml
@@ -5,6 +5,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
   labels:
     app: kibana
+    chart: kibana-1.4.1
+    heritage: Tiller
+    release: kibana
   name: kibana-ingress-service
   namespace: logging
 spec:
@@ -21,26 +24,26 @@ spec:
       paths:
       - path: /kibana
         backend:
-          serviceName: kibana-cluster-ip-service
-          servicePort: 5601
+          serviceName: kibana
+          servicePort: 443
   - host: meet-to-me.com
     http:
       paths:
       - path: /kibana
         backend:
-          serviceName: kibana-cluster-ip-service
-          servicePort: 5601
+          serviceName: kibana
+          servicePort: 443
   - host: www.meet-to-me.ru
     http:
       paths:
       - path: /kibana
         backend:
-          serviceName: kibana-cluster-ip-service
-          servicePort: 5601
+          serviceName: kibana
+          servicePort: 443
   - host: www.meet-to-me.com
     http:
       paths:
       - path: /kibana
         backend:
-          serviceName: kibana-cluster-ip-service
-          servicePort: 5601
+          serviceName: kibana
+          servicePort: 443
