--- a/k8s/kibana-ingress-service.yaml
+++ b/k8s/kibana-ingress-service.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/acme-http01-edit-in-place: 'true'
   labels:
     app: kibana
     chart: kibana-1.4.1
