--- a/k8s/kibana-ingress-service.yaml
+++ b/k8s/kibana-ingress-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kibana
+  name: kibana-load-balancer
   namespace: default
   labels:
     component: kibana
