--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -13,35 +13,11 @@ metadata:
 spec:
   tls:
     - hosts:
-        - meet-to-me.ru
         - meet-to-me.com
-        - www.meet-to-me.ru
         - www.meet-to-me.com
-      secretName: meet-to-me-ru
+      secretName: meet-to-me-com
   rules:
-    - host: meet-to-me.ru
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: client-cluster-ip-service
-              servicePort: 3000
-          - path: /api
-            backend:              
-              serviceName: server-cluster-ip-service
-              servicePort: 5000
     - host: meet-to-me.com
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: client-cluster-ip-service
-              servicePort: 3000
-          - path: /api
-            backend:              
-              serviceName: server-cluster-ip-service
-              servicePort: 5000
-    - host: www.meet-to-me.ru
       http:
         paths:
           - path: /
