--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
-  # unencrypt service-account to access gcloud
+  # decrypt service-account to access gcloud
   - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   
   # Setting up gcloud sdk 
@@ -18,15 +18,10 @@ before_install:
   # Configure gloud environment
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud config set container/use_client_certificate True
   - gcloud config set project k8s-ddy-243519
   - gcloud config set compute/zone europe-north1-a
   - gcloud container clusters get-credentials task-management-cluster
-  
-  # Login to docker hub
-  # - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-
-  # Run tests
-  # - docker build -t ddydeveloper/task-management-client-test -f ./client/Dockerfile.dev ./client
 
 script:
   # - docker run ddydeveloper/task-management-client-test npm test
