--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud beta auth application-default activate-service-account --key-file service-account.json
+  - gcloud auth application-default activate-service-account --key-file service-account.json
   - gcloud config set project k8s-ddy-243519
   - gcloud config set compute/zone europe-north1-a
   - gcloud container clusters get-credentials task-management-cluster
