--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,14 @@ env:
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 
 before_install:
-  # decrypt service-account to access gcloud
+  # Decrypt service-account to access gcloud
   - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   
-  # Setting up gcloud sdk 
+  # Setting up gcloud sdk and configure gcloud environment
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
-  
-  # Configure gloud environment
   - gcloud components update kubectl
-  # - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud auth application-default activate-service-account --key-file service-account.json
+  - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project k8s-ddy-243519
   - gcloud config set compute/zone europe-north1-a
   - gcloud container clusters get-credentials task-management-cluster
