--- a/client/package.json
+++ b/client/package.json
@@ -21,16 +21,15 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "@aspnet/signalr": "^1.1.4",
-    "core-js": "^3.1.4",
+    "core-js": "^2.6.9",
     "enum-values": "^1.2.1",
     "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
     "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
-    "primeng": "^8.0.0",
-    "rxjs": "^6.5.2",
+    "primeng": "^7.1.3",
+    "rxjs": "~6.3.3",
     "tslib": "^1.10.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.4",
