--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -15,6 +15,8 @@ spec:
       containers: 
         - name: server
           image: ddydeveloper/task-management-server
+          ports:
+            - containerPort: 5005
           env:
             - name: ConnectionStrings__TasksDb
               valueFrom:
