--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "node-sass": "~4.14.1"
   }
 }
